# upe

./: .clang-format  .gitignore  CMakeLists.txt  README.md  rules.example
.github/workflows/: ci.yml  cmake.yaml
docs/: ARCHITECTURE.md  architecture.md
include/: affinity.h  arp_table.h  benchmark.h  benchmark_test.h  latency.h  log.h  ndp_table.h  parser.h  pktbuf.h  ring.h  rule_config.h  rule_table.h  rx.h  tx.h  upe.h  worker.h
router/bench/: bench_mac_table.c  mock_dpdk.h  test_forwarding.c
router/include/: arp4.h  lpm.h  mac_table.h  router.h
router/src/: arp4.c  lpm.c  mac_table.c  main.c  rx_lcore.c
scripts/: bm_compare.py  generate-packet.py  pktgen.py
src/: affinity.c  arp_table.c  benchmark.c  benchmark_test.c  latency.c  log.c  main.c  ndp_table.c  parser.c  pktbuf.c  ring.c  rule_config.c  rule_table.c  rx_pcap.c  tx_afpacket.c  worker.c
tests/: benchmark_pktbuf.c  benchmark_throughput.c  smoke-test.sh  test_suite.c
